Type conversion optimisation in AliasPanel Implemented some more methods to Dummy{Input, Server}Window
git-svn-id: http://svn.dmdirc.com/trunk@2152 00569f92-eb28-0410-84fd-f71c24880f43